2011-11-01  6.7.3-0 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.3-0.

2011-11-01  6.7.3-0 Cristy  <quetzlzacatenango@image...>
  * 

2011-10-04  6.7.2-10 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.2-10.

2011-10-04  6.7.2-10 Cristy  <quetzlzacatenango@image...>
  * Remove most of the LLVM compiler warnings.
  * Fix bug in -evaluate-sequence multiply (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=19549).
  * Upgrade to sRGB V4 ICC profile (reference
    http://www.color.org/srgbprofiles.xalter).
  * Distinguish embedded PNG vs BMP within the MicroSoft ICON image format.

2011-09-30  6.7.2-10 Glenn Randers-Pehrson <glennrp@image...>
  * Recognize the sRGB version 4 ICC profile and write PNG sRGB chunk instead.
  * Use crc32 instead of "sRGB" string to recognize certain sRGB profiles.

2011-09-26  6.7.2-9 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.2-9.

2011-09-26  6.7.2-9 Cristy  <quetzlzacatenango@image...>
  * Fix race condition on image rotate @ 90 degrees.

2011-09-25  6.7.2-8 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.2-8.

2011-09-20  6.7.2-8 Cristy  <quetzlzacatenango@image...>
  * Prevent infinite loop when font is too large for specified width (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=19502).
  * Fix LFS cross-compile detection (patch from Mike Frysinger).
  * Add open_utf8(), fopen_utf8(), access_utf8(), etc. utility methods.

2011-09-15  6.7.2-7 Cristy  <quetzlzacatenango@image...>
  * Convert empty .htm / .html file no longer removes source file.
  * -crop 11x2@ now returns 22 images as expected.
  * Enable reading the EXIF profile in a TIFF image under Windows.
  * Support drawing text with bitmap font.

2011-09-13  6.7.2-6 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.2-6.

2011-09-12  6.7.2-6 Cristy  <quetzlzacatenango@image...>
  * Expand pixel range for 12 bit DCM images stored in 16-bit words.